# s1-panel

./: Cargo.toml  Makefile  README.md
.github/workflows/: release-deb.yml  release.yml
config/: default.toml
crates/firebat-panel-cli/: Cargo.toml  README.md
crates/firebat-panel-cli/src/: main.rs
crates/firebat-panel-client/: Cargo.toml  README.md
crates/firebat-panel-client/src/: lib.rs
crates/firebat-panel-daemon/: Cargo.toml  README.md
crates/firebat-panel-daemon/src/: config.rs  main.rs  state.rs
crates/firebat-panel-daemon/src/dbus/: interface.rs  mod.rs
crates/firebat-panel-daemon/src/faces/: arcs.rs  ascii.rs  digits.rs  mod.rs  professional.rs
crates/firebat-panel-daemon/src/rendering/: canvas.rs
crates/firebat-panel-daemon/src/sensors/: data.rs  disk.rs  mod.rs  network.rs  system.rs  temperature.rs
crates/firebat-panel-daemon/src/web/: mod.rs
crates/firebat-panel-daemon/templates/: base.html
crates/firebat-panel-daemon/templates/partials/: face.html  orientation.html  theme.html
crates/firebat-panel-hw/: Cargo.toml  README.md
crates/firebat-panel-hw/src/: error.rs  lib.rs
deploy/: 99-firebat-panel.rules  dbus-org.firebat.Panel.conf  firebat-paneld.service
