[workspace]
resolver = "2"
members = [
    "crates/firebat-panel-hw",
    "crates/firebat-panel-daemon",
    "crates/firebat-panel-cli",
    "crates/firebat-panel-client",
]

[workspace.package]
version = "0.8.1"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Ananth Bhaskararaman <ab@calculon.tech>"]
repository = "https://github.com/ananthb/firebat-panel"

[workspace.dependencies]
# Internal crates
firebat-panel-hw = { version = "0.8.1", path = "crates/firebat-panel-hw" }
firebat-panel-client = { version = "0.8.1", path = "crates/firebat-panel-client" }

# Hardware
# Use libusb backend on Linux to match reference implementation
hidapi = { version = "2", default-features = false, features = [
    "linux-static-libusb",
] }
tokio-serial = "5"

# D-Bus
zbus = { version = "5", default-features = false, features = ["tokio"] }

# System tray
ksni = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# HTML templating
askama = "0.15"

# Graphics
image = "0.25"
tiny-skia = "0.11"
fontdue = "0.9"
png = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# System
libc = "0.2"
