[package]
name = "firebat-panel-client"
description = "D-Bus client library for Firebat Panel Daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
zbus.workspace = true
anyhow.workspace = true
tracing.workspace = true
