[package]
name = "firebat-panel-hw"
description = "Hardware abstraction library for Firebat-based LCD and LED control"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
hidapi = { workspace = true }
tokio-serial = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
